--- a/src/index.css
+++ b/src/index.css
@@ -138,13 +138,13 @@ html {
 }
 .home-image-background {
   /* background-color: rgb(156, 148, 148); */
-  width: 30vw;
-  height: 80vh;
+  width: 50vw;
+  height: 70vh;
   margin: 10px auto;
   background-image: url(./famous.svg);
   background-position: center;
   background-repeat: no-repeat;
-  background-size: 440px 100px;
+  background-size: 440px 300px;
   
 }
 .home-right {
@@ -214,7 +214,7 @@ html {
   background-color: rgb(61, 61, 60);
   border-radius: 5px;
   margin-top: 10px;
-  /* background-image: url(./calc.svg); */
+  background-image: url(./Calculator.svg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: 600px 300px;
@@ -261,7 +261,7 @@ html {
   background-color: rgb(9, 82, 110);
   border-radius: 5px;
   margin-top: 10px;
-  /* background-image: url(./components/active-states.jpg); */
+  background-image: url(./active-states.svg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: 600px 300px;
@@ -711,8 +711,12 @@ details {
     display: flex;
     flex-direction: column;
     gap: 0;
-   
+  
   }
+  .name h1{
+    margin-top: 0;
+  }
+  
   .home-btn {
     width: 120px;
     height: 40px;
@@ -747,7 +751,7 @@ details {
   
   }
   .home-right {
-    height: 50px;
+    /* height: 50px; */
     width: 100%;
     height: 100vh;
     margin-top: 20px;
@@ -757,7 +761,7 @@ details {
   .home-box1{
     transform: rotate(0deg);
     width: 80%;
-    height: 51vh;
+    height: 66vh;
     margin: 10px auto;
   
   }
@@ -765,18 +769,20 @@ details {
 .home-box2{
     transform: rotate(0deg);
     width: 80%;
-    height: 51vh;
+    height: 70vh;
     margin: -10px auto;
   }
   .home-box3{
     transform: rotate(0deg);
     width: 80%;
-    height: 51vh;
+    height: 70vh;
     margin: 90px auto;
+    
   }
   .home-box1 ul,
 .home-box2 div, .home-box3 div{
-  height: 40vh;
+  height: 50vh;
+ 
  
 }
 
