--- a/src/index.css
+++ b/src/index.css
@@ -187,7 +187,7 @@ html {
 }
 
 .home-box1 {
-  height: 350px;
+  height: 320px;
   width: 55vh;
   border-radius: 8px;
   margin: 100px 50px;
@@ -264,7 +264,7 @@ html {
   list-style: none;
 }
 .home-box2 {
-  height: 350px;
+  height: 320px;
   width: 55vh;
   border-radius: 8px;
   margin-top: -120px;
@@ -277,7 +277,7 @@ html {
   padding: 3px 5px;
 }
 .home-box3 {
-  height: 350px;
+  height: 320px;
   width: 55vh;
   border-radius: 8px;
   margin-top: -50px;
@@ -325,7 +325,7 @@ html {
   border-bottom-color: gray;
   border-top-color: aqua;
   margin: 0 auto;
-  width: 60vw;
+  width: 50vw;
   height: 30vh;
   border-radius: 8px;
   background-color: rgb(90, 88, 88);
@@ -401,7 +401,7 @@ padding: 10px;
   flex-direction: column;
   border: 2px solid grey;
   margin: 0 auto;
-  width: 80vw;
+  width: 70vw;
   gap: 20px;
   padding: 20px;
   list-style: none;
@@ -597,8 +597,13 @@ padding: 10px;
   font-size: 1.5em;
   font-weight: 700;
   border: 2px solid rgb(164, 163, 163);
-  border: 2px solid red;
+  
  
+}
+.page-btns:hover, .prev-btn:hover, .next-btn:hover{
+cursor: pointer;
+width: 55px;
+height: 55px;
 }
 .prev-btn, .next-btn{
   font-size: 0.3em;
@@ -610,6 +615,9 @@ padding: 10px;
 }
 .next-btn{
   background-image: url(./arrow-right.svg)
+}
+.active-btns{
+  background-color: red;
 }
 .disable{
   background-color: gray;
