--- a/src/index.css
+++ b/src/index.css
@@ -169,13 +169,57 @@ html {
   
 }
 .home-icon-link{
-
-  margin-top: 80px;
-  height: 20vh;
+display: flex;
+  margin-top: 200px;
+  height: 12vh;
   border-radius: 8px;
   background-color: rgba(137, 43, 226, 0.481);
   box-shadow: 0 2px 10px 0px rgba(8, 6, 6, 0.314),
   0 8px 10px -6px rgba(24, 18, 18, 0.461);
+  justify-content: center;
+
+
+}
+.facebook-icon{
+  width: 100px;
+  height: 50px;
+  background-image: url(./facebookicon.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 60px 50px;
+  margin: auto 0;
+
+
+}
+
+.twitter-icon{
+  width: 100px;
+  height: 50px;
+  background-image: url(./twittericon.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 60px 50px;
+  margin: auto 0;
+
+}
+.linkedin-icon{
+  width: 100px;
+  height: 50px;
+  background-image: url(./linkedin.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 60px 50px;
+  margin: auto 0;
+
+}
+.github-icon{
+  width: 100px;
+  height: 50px;
+  background-image: url(./GitHub-Mark.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 60px 50px;
+  margin: auto 0;
 
 }
 .home-right {
@@ -187,7 +231,7 @@ html {
 }
 
 .home-box1 {
-  height: 320px;
+  height: 350px;
   width: 55vh;
   border-radius: 8px;
   margin: 100px 50px;
@@ -264,7 +308,7 @@ html {
   list-style: none;
 }
 .home-box2 {
-  height: 320px;
+  height: 350px;
   width: 55vh;
   border-radius: 8px;
   margin-top: -120px;
@@ -277,7 +321,7 @@ html {
   padding: 3px 5px;
 }
 .home-box3 {
-  height: 320px;
+  height: 350px;
   width: 55vh;
   border-radius: 8px;
   margin-top: -50px;
@@ -893,5 +937,18 @@ details {
   flex-wrap: wrap;
   height: 300px;
 }
+.home-icon-link{
+  display: flex;
+    margin-top: 0px;
+    height: 12vh;
+    border-radius: 8px;
+    background-color: rgba(137, 43, 226, 0.481);
+    box-shadow: 0 2px 10px 0px rgba(8, 6, 6, 0.314),
+    0 8px 10px -6px rgba(24, 18, 18, 0.461);
+    justify-content: center;
+  
+  
+  }
+
 
 }
