--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
- * {
+* {
   box-sizing: border-box;
 }
 
@@ -6,7 +6,6 @@ body,
 html {
   padding: 0;
   margin: 0;
- 
 }
 .nav-logo-wrapper {
   display: flex;
@@ -21,7 +20,7 @@ html {
   color: rgb(255, 254, 253);
   justify-content: flex-end;
   padding-right: 40px;
-} 
+}
 .nav-section {
   display: flex;
   margin-top: 100px;
@@ -42,7 +41,7 @@ html {
   padding: 5px;
   align-items: center;
 }
-.errorboundary-link{
+.errorboundary-link {
   width: 35vw;
 }
 .nav-links:hover {
@@ -51,31 +50,27 @@ html {
   transition: all 0.2s;
 }
 .nav {
-
   display: flex;
   height: 20vh;
   width: 50vw;
   padding: 30px;
   align-self: flex-end;
 }
-.txt{
+.txt {
   display: flex;
   flex-direction: column;
   gap: 0;
   justify-content: flex-end;
   margin-right: 100px;
-  
- 
 }
-.txt h2{
+.txt h2 {
   margin-top: -20px;
-  color:blueviolet;
+  color: blueviolet;
   border-radius: 8px;
   padding: 5px;
   background-color: rgb(231, 150, 70);
-  
 }
- .home-link,
+.home-link,
 .repository-link,
 .error-link,
 .portfolio-link {
@@ -147,87 +142,105 @@ html {
   margin-left: 10px;
   font-weight: 700;
 }
-.home-image-wrap {
-  width: 310px;
-  height: 310px;
-  background-color: rgb(19, 16, 16);
-  margin-top: 30px;
+.home-image-wrap{
+  margin-top: 10px;
+  border: 2px solid blueviolet;
+  height: 100vh;
+  padding: 10px 30px;
+  border-radius: 5px;
+  
+}
+.home-image-circle-one{
+  position: relative;
+  width: 110px;
+  height: 110px;
+
+  border: 1px solid blueviolet; 
   border-radius: 50%;
   padding: 10px;
-  box-shadow: 0 0px 25px 0px rgba(8, 6, 6, 0.314),
-  0 8px 10px -6px rgba(24, 18, 18, 0.461);
+  /* box-shadow: 0 0px 25px 0px rgba(8, 6, 6, 0.314),
+    0 8px 10px -6px rgba(24, 18, 18, 0.461); */
+  
 }
-.home-image-background {
-  width: 30vw;
-  height: 60vh;
-  margin: 10px 0px;
+.home-image-circle-two{
+  position: relative;
+  top: -180px;
+  left: 9em;
+  width: 50%;
+  height: 180px;
+  background-color: rgba(137, 43, 226, 0.498);
+  border-radius: 50%;
+  
+}
+
+.home-image{
+  top: -90px;
+  position: relative;
+  border-radius: 50%;
+  width: 25vw;
+  height: 57vh;
   background-image: url(./Famousno-bg.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: 240px 300px;
-  
-  
 }
-.home-icon-link{
-display: flex;
-  margin-top: 200px;
-  height: 12vh;
-  border-radius: 8px;
+.home-image-details{
+  position: relative;
+  top: -130px;
+}
+.home-icon-link {
+  display: flex;
+  /* margin-top: 200px; */
+  height: 40px;
+  width: 30vw;
   background-color: rgba(137, 43, 226, 0.481);
   box-shadow: 0 2px 10px 0px rgba(8, 6, 6, 0.314),
-  0 8px 10px -6px rgba(24, 18, 18, 0.461);
+    0 8px 10px -6px rgba(24, 18, 18, 0.461);
   justify-content: center;
-
-
+  margin: 0 auto;
 }
-.facebook-icon{
-  width: 100px;
-  height: 50px;
+
+.facebook-icon {
+  width: 5vw;
+  height: 40px;
   background-image: url(./facebookicon.png);
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 60px 50px;
+  background-size: 40px 30px;
   margin: auto 0;
-
-
 }
 
-.twitter-icon{
-  width: 100px;
-  height: 50px;
+.twitter-icon {
+  width: 5vw;
+  height: 40px;
   background-image: url(./twittericon.png);
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 60px 50px;
+  background-size: 40px 30px;
   margin: auto 0;
-
 }
-.linkedin-icon{
-  width: 100px;
-  height: 50px;
+.linkedin-icon {
+  width: 5vw;
+  height: 40px;
   background-image: url(./linkedin.png);
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 60px 50px;
+  background-size: 40px 30px;
   margin: auto 0;
-
 }
-.github-icon{
-  width: 100px;
-  height: 50px;
+.github-icon {
+  width: 5vw;
+  height: 40px;
   background-image: url(./GitHub-Mark.png);
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 60px 50px;
+  background-size: 40px 30px;
   margin: auto 0;
-
 }
 .home-right {
- 
   display: flex;
   flex-direction: column;
   padding: 20px;
-
 }
 
 .home-box1 {
@@ -245,7 +258,8 @@ display: flex;
 }
 
 .home-box1 h1,
-.home-box2 h1, .home-box3 h1 {
+.home-box2 h1,
+.home-box3 h1 {
   background-color: rgb(61, 61, 60);
   border-radius: 5px;
   margin-top: 0px;
@@ -258,7 +272,7 @@ display: flex;
   font-size: 1.2em;
   text-align: center;
 }
-.home-box2 h1{
+.home-box2 h1 {
   background-color: rgb(9, 82, 110);
 }
 .home-box3 h1 {
@@ -274,7 +288,7 @@ display: flex;
   font-size: 1.2em;
   text-align: center;
 }
-.home-box1 ul{
+.home-box1 ul {
   background-color: rgb(61, 61, 60);
   border-radius: 5px;
   margin-top: 10px;
@@ -337,7 +351,6 @@ display: flex;
 }
 
 .home-box3 div {
-  
   background-color: rgba(137, 43, 226, 0.575);
   border-radius: 5px;
   margin-top: 10px;
@@ -356,8 +369,6 @@ display: flex;
   height: 55vh;
   list-style: none;
 }
-
-
 
 .list-item {
   border-top-width: 20px;
@@ -381,32 +392,32 @@ display: flex;
   box-shadow: 0 0px 25px 0px rgba(22, 188, 234, 0.314),
     0 8px 10px -6px rgba(15, 133, 183, 0.461);
 }
-.repolist-container-bottom{
+.repolist-container-bottom {
   display: flex;
   color: white;
   width: 100%;
-padding: 10px;
+  padding: 10px;
   justify-content: flex-end;
- margin-bottom: 20px;
- gap: 20px;
- 
+  margin-bottom: 20px;
+  gap: 20px;
+
   padding-right: 100px;
 }
-.circle-wrap{
+.circle-wrap {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-.circle-wrap h2{
-border-width: 0 1.5px 1.5px 1.5px;
-border-style: solid;
-border-color: antiquewhite;
+.circle-wrap h2 {
+  border-width: 0 1.5px 1.5px 1.5px;
+  border-style: solid;
+  border-color: antiquewhite;
   width: 150px;
   text-align: center;
   border-radius: 8px;
-  padding :5px;
+  padding: 5px;
 }
-.circle{
+.circle {
   display: flex;
   width: 250px;
   height: 250px;
@@ -414,9 +425,8 @@ border-color: antiquewhite;
   border-radius: 50%;
   color: wheat;
   align-self: flex-end;
-
 }
-.owner-info-wrap{
+.owner-info-wrap {
   display: flex;
   flex-direction: column;
   margin-left: 200px;
@@ -424,7 +434,7 @@ border-color: antiquewhite;
   margin-top: 70px;
   justify-items: center;
 }
-.owner-info-wrap h3{
+.owner-info-wrap h3 {
   text-align: center;
   margin-top: 0;
   background-color: blueviolet;
@@ -433,18 +443,17 @@ border-color: antiquewhite;
   padding: 10px;
   width: 20vw;
 }
-.owner-info-wrap p{
+.owner-info-wrap p {
   text-align: center;
   width: 20vw;
   margin-top: 0;
   font-weight: 700;
 }
-.avatar{
+.avatar {
   height: 230px;
   color: white;
   border-radius: 50%;
   margin: 8px auto;
-  
 }
 .list-item-wrap {
   border: 2px solid;
@@ -465,7 +474,7 @@ border-color: antiquewhite;
   border-radius: 8px;
   padding-top: 35px;
   background-color: rgb(61, 60, 60);
- 
+
   -webkit-box-shadow: 0 0px 25px 25px rgba(244, 240, 240, 0.348),
     0 8px 10px -6px rgba(251, 249, 249, 0.385);
   box-shadow: 0 0px 25px 0px rgba(247, 245, 245, 0.314),
@@ -500,13 +509,13 @@ border-color: antiquewhite;
   color: yellowgreen;
   margin-top: -3pxpx;
 }
-.repolist-error{
+.repolist-error {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin-top: 100px;
 }
-.repolist-error button{
+.repolist-error button {
   width: 180px;
   height: 50px;
   border-width: 0px;
@@ -516,20 +525,16 @@ border-color: antiquewhite;
   outline: none;
   color: white;
   font-size: 1.4em;
-
 }
-.repolist-error button:hover{
-
-background-color: rgb(189, 138, 237);
-cursor: pointer;
+.repolist-error button:hover {
+  background-color: rgb(189, 138, 237);
+  cursor: pointer;
 }
 
 .single-repo-container {
   background-color: rgb(7, 16, 37);
   padding-bottom: 40px;
   padding-top: 40px;
-  
-
 }
 .single-repo-wrap {
   background-color: rgb(19, 35, 71);
@@ -539,8 +544,6 @@ cursor: pointer;
   display: flex;
   height: 110vh;
   padding: 30px;
-  
-  
 }
 .single-repo-owner {
   color: white;
@@ -558,7 +561,7 @@ cursor: pointer;
 
 .single-repo-owner h3 {
   margin: 4px auto;
- color: rgb(19, 35, 71) ;
+  color: rgb(19, 35, 71);
   background-color: antiquewhite;
   border-radius: 8px;
   padding: 5px;
@@ -574,7 +577,7 @@ cursor: pointer;
   filter: brightness(8);
   box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1),
     0 8px 10px -6px rgb(0 0 0 / 0.1);
-    border: 2px solid antiquewhite;
+  border: 2px solid antiquewhite;
 }
 .single-details-wrap {
   padding: 40px;
@@ -595,7 +598,6 @@ cursor: pointer;
   width: 40vw;
 }
 .single-repo-desc {
- 
   margin-top: 50px;
   background-color: wheat;
   padding: 20px 5px;
@@ -656,7 +658,7 @@ cursor: pointer;
   padding: 5px;
   border-radius: 6px;
 }
-.page-btns-container{
+.page-btns-container {
   display: flex;
   height: 100px;
   width: 60vw;
@@ -669,8 +671,9 @@ cursor: pointer;
   border-radius: 8px;
 }
 
-
-.page-btns, .prev-btn, .next-btn{
+.page-btns,
+.prev-btn,
+.next-btn {
   width: 50px;
   margin-top: auto;
   height: 50px;
@@ -680,15 +683,16 @@ cursor: pointer;
   font-size: 1.5em;
   font-weight: 700;
   border: 2px solid rgb(164, 163, 163);
-  
- 
 }
-.page-btns:hover, .prev-btn:hover, .next-btn:hover{
-cursor: pointer;
-width: 55px;
-height: 55px;
+.page-btns:hover,
+.prev-btn:hover,
+.next-btn:hover {
+  cursor: pointer;
+  width: 55px;
+  height: 55px;
 }
-.prev-btn, .next-btn{
+.prev-btn,
+.next-btn {
   font-size: 0.3em;
   background-image: url(./arrow-left.svg);
   background-repeat: no-repeat;
@@ -696,17 +700,17 @@ height: 55px;
   background-size: 20px;
   margin-top: 0;
 }
-.next-btn{
-  background-image: url(./arrow-right.svg)
+.next-btn {
+  background-image: url(./arrow-right.svg);
 }
-.active-btns{
+.active-btns {
   background-color: rgba(255, 0, 0, 0.555);
 }
-.disable{
+.disable {
   background-color: gray;
 }
 
-.page-indicator{
+.page-indicator {
   color: aqua;
   margin: 0 auto;
   font-size: 1.5em;
@@ -737,8 +741,8 @@ details {
 }
 
 .loader {
-  border: 16px solid #f3f3f3; 
-  border-top: 16px solid #3498db; 
+  border: 16px solid #f3f3f3;
+  border-top: 16px solid #3498db;
   border-radius: 50%;
   width: 120px;
   height: 120px;
@@ -747,25 +751,28 @@ details {
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
-.loading,.error{
+.loading,
+.error {
   margin: 10px auto;
 }
 
-
-
 .hambuger {
   display: none;
-} 
-.single-repo-btns-wrap{
+}
+.single-repo-btns-wrap {
   display: flex;
- gap: 20px;
+  gap: 20px;
   justify-content: center;
   margin: 30px auto;
 }
-.single-repo-btns-wrap button{
+.single-repo-btns-wrap button {
   height: 10vh;
   width: 20vw;
   font-weight: 600;
@@ -774,12 +781,10 @@ details {
 }
 
 @media (min-width: 180px) and (max-width: 780px) {
- 
-
   .hambuger {
     display: block;
     align-self: flex-end;
-    margin-top: 18vh;
+    margin-top: 16vh;
     margin-right: 5%;
   }
   .hambuger.active .line:nth-child(2) {
@@ -797,27 +802,31 @@ details {
     gap: 0px;
     width: 100%;
     justify-content: center;
+    height: 200px;
   }
   .nav-wrap {
-    display:flex;
+    display: flex;
     flex-direction: column;
     width: 0%;
     position: absolute;
-    height: 500%;
+    height: 333%;
     top: 0px;
     right: 0px;
     z-index: 1;
+  
+    
+    
   }
 
   .nav-section {
-   display: none;
+    display: none;
     position: absolute;
     flex-direction: column;
-    background-color: rgb(17, 112, 139);
+    background-color: blueviolet;
     margin-top: 0;
-    top: 39.8vh;
+    top: 200px;
     width: 240px;
-    height: 100%;
+    height: 108%;
     right: -100%;
     -webkit-box-shadow: 0 4px 6px hsla(0, 0%, 0%, 0.2);
     box-shadow: 0 4px 6px hsla(0, 0%, 0%, 0.2);
@@ -826,70 +835,67 @@ details {
   .show {
     right: 0%;
     display: flex;
-    
-    
   }
-  .back{
-   
+  .back {
     width: 100%;
     background-color: rgba(128, 128, 128, 0.27);
   }
 
-  .nav-links{
+  .nav-links {
     width: 100%;
     text-align: left;
   }
 
-
-  
   .home-top-container {
     display: flex;
     flex-direction: column;
     height: 300vh;
     width: 100%;
-   
-    
   }
 
   .home-container {
     display: flex;
     flex-direction: column;
     padding: 0px;
-    width:100%;
+    width: 100%;
     margin: 0 auto;
-    
-    
   }
-  .home-btn{
+  .home-btn {
     width: 100vw;
     margin-bottom: 10px;
     margin: 0 auto;
-   
   }
   .home-btn-profile {
     width: 100vw;
     margin: 0 auto;
-    
   }
-  .home-btn-wrap{
+  .home-btn-wrap {
     display: flex;
     gap: 10px;
   }
-  .home-tex{
+  .home-tex {
     width: 100%;
     padding: 15px;
-    font-size: 1.5em;
+    font-size: 1.2em;
+    margin-top: -10px;
+    text-align: justify;
+    background-color: blueviolet;
+    color: aliceblue;
+  }
+  .home-hello{
+    margin-left: 15px;
   }
   .name {
     display: flex;
-    flex-direction: column;
-    gap: 0;
-  
+    flex-direction: row;
+    gap: 1em;
+    margin: 10px auto;
   }
-  .name h1{
+  .name h1 {
     margin-top: 0;
+    font-size: 1.7em;
   }
-  
+
   .home-btn {
     width: 120px;
     height: 40px;
@@ -900,173 +906,188 @@ details {
   }
   .name-wrap {
     width: 100%;
+   
+  }
+  .name-wrap h4{
+   
+    align-self: flex-end;
+    margin-right: 15px;
   }
   .home-btn-profile {
     width: 120px;
     height: 40px;
     border-radius: 8px;
-    border: 1px solid; 
+    border: 1px solid;
     border: 1.5px solid blueviolet;
     background-color: antiquewhite;
     margin-left: 0px;
     font-weight: 700;
   }
-  .home-image-wrap {
-    width: 310px;
-    height: 310px;
-    margin-bottom:200px;
-  }
-  .home-image-background {
-    height: 60vh;
-    width: 40vw;
-    margin: 0px auto;
-    background-size: 200px;
   
-  }
+.home-image-wrap{
+  margin-top: 10px;
+  border: 2px solid blueviolet;
+  height: 420px;
+  padding: 10px 30px;
+  border-radius: 5px;
+  
+}
+.home-image-circle-one{
+  position: relative;
+  width: 110px;
+  height: 110px;
+  border: 1px solid blueviolet; 
+  border-radius: 50%;
+  padding: 10px;
+ 
+}
+.home-image-circle-two{
+  position: relative;
+  top: -180px;
+  left: 9em;
+  width: 140px;
+  height: 140px;
+  background-color: rgba(137, 43, 226, 0.498);
+  border-radius: 50%;
+  
+}
+
+.home-image{
+  top: -90px;
+  position: relative;
+  border-radius: 50%;
+  width: 79vw;
+  height: 300px;
+  background-image: url(./Famousno-bg.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 240px 300px;
+  margin: 0 auto;
+}
+.home-image-details{
+  position: relative;
+  top: -130px;
+}
   .home-right {
     width: 100%;
     height: 100%;
     margin: 20px auto;
     padding: 0;
-   
-  
-   
     
   }
 
-  .home-box1{
+  .home-box1 {
     transform: rotate(0deg);
     width: 80%;
     height: 60vh;
     margin: 0 auto;
-   
-  
   }
 
-
-.home-box2{
+  .home-box2 {
     transform: rotate(0deg);
     width: 80%;
     height: 60vh;
     margin: 0px auto;
   }
-  .home-box3{
+  .home-box3 {
     transform: rotate(0deg);
     width: 80%;
     height: 60vh;
     margin: 60px auto;
-    
   }
   .home-box1 ul,
-.home-box2 div, .home-box3 div{
-  height: 50vh;
- 
- 
-}
-
-
-  .home-box2{
-    margin-top:100px;
+  .home-box2 div,
+  .home-box3 div {
+    height: 50vh;
   }
-.para{
-  margin-left: 0;
-}
-.repolist-container-bottom{
-  display: flex;
-  flex-direction: column;
- 
-  width: 100%;
-  justify-content: center;
-  padding: 0;
- 
-}
-.circle-wrap{
 
-  width: 100%;
-  
-}
-.circle{
-  align-self: center;
-}
-.circle-wrap h2{
-  width: 80%;
-}
-
-.owner-info-wrap{
-  margin-left: 0;
-}
-.owner-info-wrap h3{
-  width: 100%;
-}
-.owner-info-wrap p{
-
-  width: 100%;
- 
-}
-.repo-visible ,.repo-branch{
-
-  width: 20vw;
-  
-}
-.page-btns-container{
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  height: 300px;
-}
-.home-icon-link{
-  display: flex;
-    margin-top: 0px;
-    height: 12vh;
-    border-radius: 8px;
-    background-color: rgba(137, 43, 226, 0.481);
-    box-shadow: 0 2px 10px 0px rgba(8, 6, 6, 0.314),
-    0 8px 10px -6px rgba(24, 18, 18, 0.461);
+  .home-box2 {
+    margin-top: 100px;
+  }
+  .para {
+    margin-left: 0;
+  }
+  .repolist-container-bottom {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
     justify-content: center;
-  
-  
+    padding: 0;
   }
-  .single-details-wrap, .single-repo-wrap{
+  .circle-wrap {
+    width: 100%;
+  }
+  .circle {
+    align-self: center;
+  }
+  .circle-wrap h2 {
+    width: 80%;
+  }
+
+  .owner-info-wrap {
+    margin-left: 0;
+  }
+  .owner-info-wrap h3 {
+    width: 100%;
+  }
+  .owner-info-wrap p {
+    width: 100%;
+  }
+  .repo-visible,
+  .repo-branch {
+    width: 20vw;
+  }
+  .page-btns-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    height: 300px;
+  }
+  .home-icon-link {
+    display: flex;
+    margin-top: 0px;
+    width: 100%;
+    gap: 20px;
+    background-color: rgba(137, 43, 226, 0.481);
+    box-shadow: none ;
+    justify-content: center;
+  }
+  .linkedin-icon, .facebook-icon, .twitter-icon, .github-icon{
+    width: 50px;
+  }
+  .single-details-wrap,
+  .single-repo-wrap {
     display: flex;
     flex-direction: column;
     width: 100%;
     margin-left: 0;
     padding: 0;
-    
   }
-  .single-repo-wrap{
+  .single-repo-wrap {
     padding: 0 5px;
     height: 150%;
   }
-  
-  .image-wrap, .single-repo-name{
-    width: 100%;
-    
-  }
-  .image, .single-repo-desc{
+
+  .image-wrap,
+  .single-repo-name {
     width: 100%;
   }
- 
-.single-repo-container{
-  padding-bottom: 100%;
+  .image,
+  .single-repo-desc {
+    width: 100%;
+  }
+
+  .single-repo-container {
+    padding-bottom: 100%;
+  }
+  .single-repo-btns-wrap {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+  .single-repo-btns-wrap button {
+    width: 80%;
+    margin: 0 auto;
+    font-size: 1.4em;
+  }
 }
-.single-repo-btns-wrap{
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-
-
-}
-.single-repo-btns-wrap button{
-  width: 80%;
-  margin: 0 auto;
-  font-size: 1.4em;
-}
-
-
-
-}
- 
-
-
-
